--- a/eZ/Bundle/EzPublishCoreBundle/Resources/config/papi.yml
+++ b/eZ/Bundle/EzPublishCoreBundle/Resources/config/papi.yml
@@ -16,7 +16,7 @@ services:
             - "@ezpublish.config.resolver"
             - "%ezpublish.api.inner_repository.class%"
             - "%ezpublish.api.role.policy_map%"
-            - '@eZ\Bundle\EzPublishCoreBundle\SiteAccess\LanguageResolver'
+            - '@eZ\Publish\API\Repository\LanguageResolver'
             - "@?logger"
         calls:
             - [setContainer, ["@service_container"]]
