--- a/eZ/Bundle/EzPublishCoreBundle/Resources/config/templating.yml
+++ b/eZ/Bundle/EzPublishCoreBundle/Resources/config/templating.yml
@@ -237,9 +237,7 @@ services:
     ezpublish.view.cache_response_listener:
         class: eZ\Bundle\EzPublishCoreBundle\EventListener\CacheViewResponseListener
         arguments:
-            - $content.view_cache$
-            - $content.ttl_cache$
-            - $content.default_ttl$
+            $configResolver: '@ezpublish.config.resolver'
         tags:
             - { name: kernel.event_subscriber }
 
