--- a/eZ/Bundle/EzPublishCoreBundle/Resources/config/fieldtype_services.yml
+++ b/eZ/Bundle/EzPublishCoreBundle/Resources/config/fieldtype_services.yml
@@ -107,4 +107,4 @@ services:
             $contentService: '@ezpublish.api.service.content'
             $locationService: '@ezpublish.api.service.location'
             $contentTypeService: '@ezpublish.api.service.content_type'
-            $mappings: '$fieldtypes.ezimageasset.mappings$'
+            $configResolver: 'ezpublish.config.resolver'
