--- a/eZ/Publish/Core/settings/fieldtype_services.yml
+++ b/eZ/Publish/Core/settings/fieldtype_services.yml
@@ -55,7 +55,7 @@ services:
             $contentService: '@ezpublish.api.service.content'
             $locationService: '@ezpublish.api.service.location'
             $contentTypeService: '@ezpublish.api.service.content_type'
-            $mappings: '$fieldtypes.ezimageasset.mappings$'
+            $configResolver: '@ezpublish.config.resolver'
 
     eZ\Publish\Core\FieldType\FieldTypeRegistry: ~
 
