--- a/eZ/Publish/Core/settings/search_engines/legacy.yml
+++ b/eZ/Publish/Core/settings/search_engines/legacy.yml
@@ -43,10 +43,10 @@ services:
     ezpublish.search.legacy.gateway.location.inner:
         class: eZ\Publish\Core\Search\Legacy\Content\Location\Gateway\DoctrineDatabase
         arguments:
-            - "@ezpublish.api.search_engine.legacy.dbhandler"
-            - "@ezpublish.search.legacy.gateway.criteria_converter.location"
-            - "@ezpublish.search.legacy.gateway.sort_clause_converter.location"
-            - "@ezpublish.spi.persistence.language_handler"
+            $connection: "@ezpublish.persistence.connection"
+            $criteriaConverter: "@ezpublish.search.legacy.gateway.criteria_converter.location"
+            $sortClauseConverter: "@ezpublish.search.legacy.gateway.sort_clause_converter.location"
+            $languageHandler: "@ezpublish.spi.persistence.language_handler"
 
     ezpublish.search.legacy.gateway.location.exception_conversion:
         class: eZ\Publish\Core\Search\Legacy\Content\Location\Gateway\ExceptionConversion
