--- a/eZ/Bundle/EzPublishCoreBundle/Resources/config/fieldtype_services.yml
+++ b/eZ/Bundle/EzPublishCoreBundle/Resources/config/fieldtype_services.yml
@@ -110,4 +110,4 @@ services:
             $contentService: '@ezpublish.api.service.content'
             $locationService: '@ezpublish.api.service.location'
             $contentTypeService: '@ezpublish.api.service.content_type'
-            $configResolver: 'ezpublish.config.resolver'
+            $configResolver: '@ezpublish.config.resolver'
