Dropped containerBuilder.php and deprecated usage of container files
RepositoryContainerBuilder should be used instead.

--- a/eZ/Publish/Core/settings/storage_engines/cache.yml
+++ b/eZ/Publish/Core/settings/storage_engines/cache.yml
@@ -26,7 +26,7 @@ services:
         arguments: ["@ezpublish.cache_pool.driver"]
 
     # Note for tests: Default changed to in-memory Array cache in tests/common.yml by default, and opt in for redis
-    # testing is defined in containerBuilder.php
+    # testing is handled by \eZ\Publish\Core\Repository\Tests\RepositoryContainerBuilder
     ezpublish.cache_pool.driver:
         public: false
         class: Symfony\Component\Cache\Adapter\FilesystemAdapter
