--- a/eZ/Bundle/EzPublishCoreBundle/Resources/config/fieldtype_services.yml
+++ b/eZ/Bundle/EzPublishCoreBundle/Resources/config/fieldtype_services.yml
@@ -62,17 +62,25 @@ services:
         alias: ezpublish.image_alias.imagine.alias_generator.image_asset
 
     ezpublish.fieldType.ezimage.io_service.published:
-        class: eZ\Publish\Core\IO\ConfigScopeChangeAwareIOService
-        arguments:
-            $configResolver: '@ezpublish.config.resolver'
-            $innerIOService: '@ezpublish.core.io.service'
-            $prefixParameterName: 'image.published_images_dir'
+        parent: ezpublish.core.io.service
 
     ezpublish.fieldType.ezimage.io_service.draft:
+        parent: ezpublish.core.io.service
+
+    ezpublish.fieldType.ezimage.io_service.published.config_scope_change_aware:
         class: eZ\Publish\Core\IO\ConfigScopeChangeAwareIOService
+        decorates: ezpublish.fieldType.ezimage.io_service.published
         arguments:
             $configResolver: '@ezpublish.config.resolver'
-            $innerIOService: '@ezpublish.core.io.service'
+            $innerIOService: '@ezpublish.fieldType.ezimage.io_service.published.config_scope_change_aware.inner'
+            $prefixParameterName: 'image.published_images_dir'
+
+    ezpublish.fieldType.ezimage.io_service.draft.config_scope_change_aware:
+        class: eZ\Publish\Core\IO\ConfigScopeChangeAwareIOService
+        decorates: ezpublish.fieldType.ezimage.io_service.draft
+        arguments:
+            $configResolver: '@ezpublish.config.resolver'
+            $innerIOService: '@ezpublish.fieldType.ezimage.io_service.draft.config_scope_change_aware.inner'
             $prefixParameterName: 'image.versioned_images_dir'
 
     ezpublish.fieldType.ezimage.pathGenerator:
