EZP-30465: Changed the way PermissionResolver is built to make it reusable

--- a/eZ/Bundle/EzPublishCoreBundle/Resources/config/papi.yml
+++ b/eZ/Bundle/EzPublishCoreBundle/Resources/config/papi.yml
@@ -17,6 +17,7 @@ services:
             - "%ezpublish.api.inner_repository.class%"
             - "%ezpublish.api.role.policy_map%"
             - '@eZ\Publish\API\Repository\LanguageResolver'
+            - '@eZ\Publish\API\Repository\PermissionResolver'
             - "@?logger"
         calls:
             - [setContainer, ["@service_container"]]
