--- a/eZ/Publish/Core/settings/repository/inner.yml
+++ b/eZ/Publish/Core/settings/repository/inner.yml
@@ -10,6 +10,7 @@ services:
             - "%ezpublish.api.inner_repository.class%"
             - "%ezpublish.api.role.policy_map%"
             - '@eZ\Publish\API\Repository\LanguageResolver'
+            - '@eZ\Publish\API\Repository\PermissionResolver'
         calls:
             - [setContainer, ["@service_container"]]
 
@@ -29,7 +30,7 @@ services:
             - '@eZ\Publish\Core\Repository\Mapper\ContentTypeDomainMapper'
             - '@eZ\Publish\Core\Repository\Mapper\RoleDomainMapper'
             - '@eZ\Publish\Core\Repository\Permission\LimitationService'
-        lazy: true
+            - '%languages%'
 
     ezpublish.api.service.inner_content:
         class: eZ\Publish\Core\Repository\ContentService
@@ -183,3 +184,28 @@ services:
     eZ\Publish\Core\Repository\Permission\LimitationService:
         arguments:
             $limitationTypes: !tagged_iterator { tag: ezpublish.limitationType, index_by: alias }
+
+    eZ\Publish\Core\Repository\Helper\RoleDomainMapper:
+        arguments:
+            $limitationService: '@eZ\Publish\Core\Repository\Permission\LimitationService'
+
+    eZ\Publish\Core\Repository\Permission\PermissionResolver:
+        arguments:
+            $roleDomainMapper: '@eZ\Publish\Core\Repository\Helper\RoleDomainMapper'
+            $limitationService: '@eZ\Publish\Core\Repository\Permission\LimitationService'
+            $userHandler: '@ezpublish.spi.persistence.legacy.user.handler'
+            $configResolver: '@ezpublish.config.resolver'
+            $policyMap: '%ezpublish.api.role.policy_map%'
+
+    eZ\Publish\Core\Repository\Permission\PermissionCriterionResolver:
+        arguments:
+            $innerPermissionResolver: '@eZ\Publish\Core\Repository\Permission\PermissionResolver'
+            $limitationService: '@eZ\Publish\Core\Repository\Permission\LimitationService'
+
+    eZ\Publish\Core\Repository\Permission\CachedPermissionService:
+        arguments:
+            $innerPermissionResolver: '@eZ\Publish\Core\Repository\Permission\PermissionResolver'
+            $permissionCriterionResolver: '@eZ\Publish\API\Repository\PermissionCriterionResolver'
+
+    eZ\Publish\API\Repository\PermissionCriterionResolver: '@eZ\Publish\Core\Repository\Permission\PermissionCriterionResolver'
+    eZ\Publish\API\Repository\PermissionResolver: '@eZ\Publish\Core\Repository\Permission\CachedPermissionService'
