EZP-31546: Made ConfigScopeChangeAwareIOService based services lazy

--- a/eZ/Bundle/EzPublishCoreBundle/Resources/config/fieldtype_services.yml
+++ b/eZ/Bundle/EzPublishCoreBundle/Resources/config/fieldtype_services.yml
@@ -70,6 +70,7 @@ services:
     ezpublish.fieldType.ezimage.io_service.published.config_scope_change_aware:
         class: eZ\Publish\Core\IO\ConfigScopeChangeAwareIOService
         decorates: ezpublish.fieldType.ezimage.io_service.published
+        lazy: true
         arguments:
             $configResolver: '@ezpublish.config.resolver'
             $innerIOService: '@ezpublish.fieldType.ezimage.io_service.published.config_scope_change_aware.inner'
@@ -78,6 +79,7 @@ services:
     ezpublish.fieldType.ezimage.io_service.draft.config_scope_change_aware:
         class: eZ\Publish\Core\IO\ConfigScopeChangeAwareIOService
         decorates: ezpublish.fieldType.ezimage.io_service.draft
+        lazy: true
         arguments:
             $configResolver: '@ezpublish.config.resolver'
             $innerIOService: '@ezpublish.fieldType.ezimage.io_service.draft.config_scope_change_aware.inner'
