--- a/eZ/Bundle/EzPublishCoreBundle/Resources/config/fieldtype_services.yml
+++ b/eZ/Bundle/EzPublishCoreBundle/Resources/config/fieldtype_services.yml
@@ -98,10 +98,15 @@ services:
 
     # BinaryFile
     ezpublish.fieldType.ezbinaryfile.io_service:
+        parent: ezpublish.core.io.service
+
+    ezpublish.fieldType.ezbinaryfile.io_service.config_scope_change_aware:
         class: eZ\Publish\Core\IO\ConfigScopeChangeAwareIOService
+        decorates: ezpublish.fieldType.ezbinaryfile.io_service
+        lazy: true
         arguments:
             $configResolver: '@ezpublish.config.resolver'
-            $innerIOService: '@ezpublish.core.io.service'
+            $innerIOService: '@ezpublish.fieldType.ezbinaryfile.io_service.config_scope_change_aware.inner'
             $prefixParameterName: 'binary_dir'
 
     ezpublish.fieldType.ezbinaryfile.pathGenerator:
