--- a/eZ/Publish/Core/settings/repository/inner.yml
+++ b/eZ/Publish/Core/settings/repository/inner.yml
@@ -10,7 +10,6 @@ services:
             - "%ezpublish.api.inner_repository.class%"
             - "%ezpublish.api.role.policy_map%"
             - '@eZ\Publish\API\Repository\LanguageResolver'
-            - '@eZ\Publish\API\Repository\PermissionResolver'
         calls:
             - [setContainer, ["@service_container"]]
 
@@ -30,6 +29,7 @@ services:
             - '@eZ\Publish\Core\Repository\Mapper\ContentTypeDomainMapper'
             - '@eZ\Publish\Core\Repository\Mapper\RoleDomainMapper'
             - '@eZ\Publish\Core\Repository\Permission\LimitationService'
+            - '@eZ\Publish\API\Repository\PermissionService'
             - '%languages%'
 
     ezpublish.api.service.inner_content:
@@ -185,13 +185,9 @@ services:
         arguments:
             $limitationTypes: !tagged_iterator { tag: ezpublish.limitationType, index_by: alias }
 
-    eZ\Publish\Core\Repository\Helper\RoleDomainMapper:
-        arguments:
-            $limitationService: '@eZ\Publish\Core\Repository\Permission\LimitationService'
-
     eZ\Publish\Core\Repository\Permission\PermissionResolver:
         arguments:
-            $roleDomainMapper: '@eZ\Publish\Core\Repository\Helper\RoleDomainMapper'
+            $roleDomainMapper: '@eZ\Publish\Core\Repository\Mapper\RoleDomainMapper'
             $limitationService: '@eZ\Publish\Core\Repository\Permission\LimitationService'
             $userHandler: '@ezpublish.spi.persistence.legacy.user.handler'
             $configResolver: '@ezpublish.config.resolver'
@@ -206,6 +202,3 @@ services:
         arguments:
             $innerPermissionResolver: '@eZ\Publish\Core\Repository\Permission\PermissionResolver'
             $permissionCriterionResolver: '@eZ\Publish\API\Repository\PermissionCriterionResolver'
-
-    eZ\Publish\API\Repository\PermissionCriterionResolver: '@eZ\Publish\Core\Repository\Permission\PermissionCriterionResolver'
-    eZ\Publish\API\Repository\PermissionResolver: '@eZ\Publish\Core\Repository\Permission\CachedPermissionService'
