[Composer] Created Ibexa namespaces
* Ibexa\Platform\API\Repository to map consumer API Services and Values.
* Ibexa\Platform\SPI\Repository to map Service Provider Interfaces (extension points and "newables").
* Ibexa\Platform\Repository to map core/internal Kernel implementations of APIs and SPIs.

--- a/composer.json
+++ b/composer.json
@@ -73,7 +73,10 @@
     "autoload": {
         "psr-4": {
             "EzSystems\\PlatformInstallerBundle\\": "eZ/Bundle/PlatformInstallerBundle/src",
-            "eZ\\": "eZ"
+            "eZ\\": "eZ",
+            "Ibexa\\Platform\\API\\Repository\\": "src/lib/API/Repository",
+            "Ibexa\\Platform\\SPI\\Repository\\": "src/lib/SPI/Repository",
+            "Ibexa\\Platform\\Core\\Repository\\": "src/lib/Core/Repository"
         }
     },
     "autoload-dev": {
