--- a/eZ/Bundle/EzPublishCoreBundle/Resources/config/routing.yml
+++ b/eZ/Bundle/EzPublishCoreBundle/Resources/config/routing.yml
@@ -36,6 +36,7 @@ services:
             - "@ezpublish.api.service.url_alias"
             - "@ezpublish.api.service.content"
             - "@ezpublish.urlalias_generator"
+            - "@ezpublish.api.repository"
             - "@?router.request_context"
             - "@?logger"
         calls:
