--- a/.travis.yml
+++ b/.travis.yml
@@ -44,15 +44,16 @@ matrix:
     - name: 'MySQL integration tests'
       php: 7.3
       env: TEST_CONFIG="phpunit-integration-legacy.xml" DB="mysql" DATABASE="mysql://root@localhost/testdb"
-    - name: 'Code Style Check'
-      php: 7.3
-      env: CHECK_CS=1
 # 7.4
     - php: 7.4
       env: TEST_CONFIG="phpunit.xml"
     - php: 7.4
       env: TEST_CONFIG="phpunit-integration-legacy.xml" DB="postgresql" DATABASE="pgsql://postgres@localhost/testdb"
-
+# Quality Tools
+    - name: 'Code Style Check'
+      php: 7.4
+      env: UPDATE_DEPENDENCIES=1
+      script: ./bin/.travis/check_code_style.sh
 
 # test only master, stable branches and pull requests
 branches:
@@ -81,7 +82,7 @@ before_install:
   - TEST_TIMEZONE=${TEST_TIMEZONES["`shuf -i 0-2 -n 1`"]}
 
 install:
-  - if [ "$TEST_CONFIG" != "" -o "$CHECK_CS" = "1" ] ; then travis_retry composer install --no-progress --no-interaction --prefer-dist $COMPOSER_FLAGS; fi
+  - if [ "$TEST_CONFIG" != "" -o "$UPDATE_DEPENDENCIES" = "1" ] ; then travis_retry composer update --no-progress --no-interaction --prefer-dist $COMPOSER_FLAGS; fi
   # Setup Solr search if asked for
   - if [ "$TEST_CONFIG" = "phpunit-integration-legacy-solr.xml" ] ; then ./vendor/ezsystems/ezplatform-solr-search-engine/bin/.travis/init_solr.sh; fi
 
@@ -89,7 +90,6 @@ install:
 script:
   - if [ "$TEST_CONFIG" != "" ] ; then php -d date.timezone=$TEST_TIMEZONE -d memory_limit=-1 vendor/bin/phpunit -c $TEST_CONFIG ; fi
   - if [ "$BEHAT_OPTS" != "" ] ; then cd "$HOME/build/ezplatform"; docker-compose exec --user www-data app sh -c "bin/behat $BEHAT_OPTS" ; fi
-  - if [ "$CHECK_CS" = "1" ] ; then ./bin/.travis/check_code_style.sh; fi
 
 notifications:
   slack:
