--- a/eZ/Bundle/EzPublishCoreBundle/Resources/config/routing.yml
+++ b/eZ/Bundle/EzPublishCoreBundle/Resources/config/routing.yml
@@ -23,6 +23,11 @@ services:
         tags:
             - { name: kernel.event_subscriber }
 
+    eZ\Publish\Core\MVC\Symfony\Component\Serializer\CompoundMatcherNormalizer:
+        class:
+        tags:
+            - { name: serializer.normalizer }
+
     ezpublish.url_generator.base:
         class: eZ\Publish\Core\MVC\Symfony\Routing\Generator
         abstract: true
