Fix getRootLocation access to  private service
`eZ\Bundle\EzPublishCoreBundle\Controller::getGlobalHelper` tries to get `ezpublish.templating.global_helper` but this service is private.

--- a/eZ/Bundle/EzPublishCoreBundle/Resources/config/templating.yml
+++ b/eZ/Bundle/EzPublishCoreBundle/Resources/config/templating.yml
@@ -106,6 +106,7 @@ services:
         alias: ezpublish.templating.global_helper.core
 
     ezpublish.templating.global_helper:
+        public: true
         alias: ezpublish.templating.global_helper.core
 
     ezpublish.twig.extension.core:
