Edited Sonar config

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,2 +1,3 @@
-sonar.projectKey=ibexa:ezplatform-kernel
+sonar.projectKey=ezsystems_ezplatform-kernel
+sonar.organization=ezsystems
 sonar.projectName=eZ Platform by Ibexa Kernel
