--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,4 @@
 sonar.projectKey=ezsystems_ezplatform-kernel
 sonar.organization=ezsystems
 sonar.projectName=eZ Platform by Ibexa Kernel
+sonar.branch=master
