--- a/eZ/Bundle/EzPublishIOBundle/Resources/config/io.yml
+++ b/eZ/Bundle/EzPublishIOBundle/Resources/config/io.yml
@@ -113,7 +113,7 @@ services:
 
     eZ\Bundle\EzPublishIOBundle\Flysystem\Adapter\SiteAccessAwareLocalAdapter:
         arguments:
-            $complexConfigProcessor: '@eZ\Bundle\EzPublishCoreBundle\SiteAccess\Config\ComplexConfigProcessor'
+            $configProcessor: '@eZ\Publish\SPI\SiteAccess\ConfigProcessor'
             $config: '%ibexa.platform.io.nfs.adapter.config%'
 
     ibexa.platform.io.nfs.adapter.site_access_aware:
