--- a/composer.json
+++ b/composer.json
@@ -105,6 +105,7 @@
         "_ezplatform_branch_for_behat_tests_comment_": "ezplatform branch to use to run Behat tests",
         "_ezplatform_branch_for_behat_tests": "master",
         "branch-alias": {
+            "sg_demo": "1.2.x-dev",
             "dev-master": "1.2.x-dev",
             "dev-tmp_ci_branch": "1.2.x-dev"
         },
