--- a/composer.json
+++ b/composer.json
@@ -63,7 +63,8 @@
         "friendsofphp/php-cs-fixer": "^2.16.2",
         "ezsystems/ezplatform-code-style": "^0.1",
         "phpunit/phpunit": "^8.2",
-        "matthiasnoback/symfony-dependency-injection-test": "^4.1"
+        "matthiasnoback/symfony-dependency-injection-test": "^4.1",
+        "symfony/phpunit-bridge": "^5.1"
     },
     "conflict": {
         "symfony/cache": "5.0.11 || 5.1.3",
