WIP: Extensible Installer

--- a/eZ/Bundle/PlatformInstallerBundle/src/Resources/config/services.yml
+++ b/eZ/Bundle/PlatformInstallerBundle/src/Resources/config/services.yml
@@ -23,6 +23,7 @@ services:
             $cachePool: '@ezpublish.cache_pool'
             $environment: "%kernel.environment%"
             $repositoryConfigurationProvider: '@ezpublish.api.repository_configuration_provider'
+            $eventDispatcher: '@event_dispatcher'
         tags:
             - { name: console.command, command: ezplatform:install }
 
