--- a/eZ/Publish/Core/settings/policies.yml
+++ b/eZ/Publish/Core/settings/policies.yml
@@ -58,3 +58,9 @@ parameters:
         url:
             view: ~
             update: ~
+
+        setting:
+            read: ~
+            update: ~
+            create: ~
+            remove: ~
