--- a/eZ/Publish/Core/settings/repository/inner.yml
+++ b/eZ/Publish/Core/settings/repository/inner.yml
@@ -124,6 +124,12 @@ services:
         factory: ["@ezpublish.api.inner_repository", getUserPreferenceService]
         lazy: true
 
+    ezpublish.api.service.inner_setting:
+        class: eZ\Publish\Core\Repository\SettingService
+        arguments:
+            $settingHandler: '@ezpublish.spi.persistence.cache.settingHandler'
+            $permissionResolver: '@eZ\Publish\API\Repository\PermissionResolver'
+
     # Factories
     ezpublish.search.background_indexer:
         class: eZ\Publish\Core\Search\Common\BackgroundIndexer\NullIndexer
