EZP-32220: Added new SettingService to manage application-wide settings

--- a/eZ/Publish/Core/settings/repository.yml
+++ b/eZ/Publish/Core/settings/repository.yml
@@ -71,3 +71,7 @@ services:
     ezpublish.api.service.user_preference:
         alias: eZ\Publish\Core\Event\UserPreferenceService
         public: true
+
+    ezpublish.api.service.setting:
+        alias: eZ\Publish\Core\Event\SettingService
+        public: true
