EZP-32220: Added new SettingService to manage application-wide settings (#147)
* EZP-32220: Added new SettingService to manage application-wide settings

* EZP-32220: SettingService tests

* fix: Coding Standards

* fix: Coding Standards (Licence)

* fix: Get rid of setting / read policy

* fix: Code Review

* fix: Code Review

* fix: Code Review

* fix: Code Review

* fix: Coding Standards

* [CS] EA: fixed calls to static assert methods

* [Tests] Refactored Event SettingServiceTest to avoid code repetitions

* [Tests] Made identifiers used in tests unique per the entire TestCase

* [Tests] Made SettingService public

Co-authored-by: Andrew Longosz <alongosz@users.noreply.github.com>

--- a/eZ/Publish/Core/settings/policies.yml
+++ b/eZ/Publish/Core/settings/policies.yml
@@ -58,3 +58,8 @@ parameters:
         url:
             view: ~
             update: ~
+
+        setting:
+            update: ~
+            create: ~
+            remove: ~
