--- a/eZ/Publish/Core/settings/storage_engines/cache.yml
+++ b/eZ/Publish/Core/settings/storage_engines/cache.yml
@@ -146,6 +146,9 @@ services:
         class: eZ\Publish\Core\Persistence\Cache\UrlWildcardHandler
         parent: ezpublish.spi.persistence.cache.abstractHandler
 
+    eZ\Publish\Core\Persistence\Cache\SettingHandler:
+        parent: ezpublish.spi.persistence.cache.abstractHandler
+
     ezpublish.spi.persistence.cache:
         class: eZ\Publish\Core\Persistence\Cache\Handler
         arguments:
@@ -165,4 +168,5 @@ services:
             - '@ezpublish.spi.persistence.cache.notificationHandler'
             - '@ezpublish.spi.persistence.cache.userPreferenceHandler'
             - "@ezpublish.spi.persistence.cache.urlWildcardHandler"
+            - '@eZ\Publish\Core\Persistence\Cache\SettingHandler'
             - "@ezpublish.spi.persistence.cache.persistenceLogger"
