EZP-32250: Moved PasswordHashService to PAPI

--- a/eZ/Publish/Core/settings/fieldtype_services.yml
+++ b/eZ/Publish/Core/settings/fieldtype_services.yml
@@ -62,7 +62,7 @@ services:
 
     eZ\Publish\Core\Repository\User\PasswordHashService: ~
 
-    eZ\Publish\Core\Repository\User\PasswordHashServiceInterface:
+    eZ\Publish\API\Repository\PasswordHashService:
         alias: eZ\Publish\Core\Repository\User\PasswordHashService
 
     eZ\Publish\Core\Repository\User\PasswordValidator: ~
