EZP-32250: Exposed PasswordHashService APIs (#150)

--- a/eZ/Publish/Core/settings/fieldtypes.yml
+++ b/eZ/Publish/Core/settings/fieldtypes.yml
@@ -398,8 +398,8 @@ services:
         parent: ezpublish.fieldType
         arguments:
             - "@ezpublish.spi.persistence.cache.userHandler"
-            - '@eZ\Publish\Core\Repository\User\PasswordHashService'
-            - '@eZ\Publish\Core\Repository\User\PasswordValidator'
+            - '@eZ\Publish\API\Repository\PasswordHashService'
+            - '@eZ\Publish\Core\Repository\User\PasswordValidatorInterface'
         tags:
             - {name: ezplatform.field_type, alias: ezuser}
 
