--- a/eZ/Publish/Core/settings/fieldtype_services.yml
+++ b/eZ/Publish/Core/settings/fieldtype_services.yml
@@ -62,6 +62,9 @@ services:
 
     eZ\Publish\Core\Repository\User\PasswordHashService: ~
 
+    eZ\Publish\API\Repository\PasswordHashService:
+        alias: eZ\Publish\Core\Repository\User\PasswordHashService
+
     eZ\Publish\Core\Repository\User\PasswordValidator: ~
 
     eZ\Publish\Core\Repository\User\PasswordValidatorInterface:
