EZP-32259: Replaced "ezplatform" commands namespace with "ibexa" (emit warning)

--- a/eZ/Bundle/EzPublishCoreBundle/Resources/config/services.yml
+++ b/eZ/Bundle/EzPublishCoreBundle/Resources/config/services.yml
@@ -81,6 +81,10 @@ services:
         tags:
             - { name: kernel.event_subscriber }
 
+    eZ\Bundle\EzPublishCoreBundle\EventListener\BackwardCompatibleCommandListener:
+        tags:
+            - { name: kernel.event_subscriber }
+
     ezpublish.controller.base:
         class: eZ\Publish\Core\MVC\Symfony\Controller\Controller
         abstract: true
