--- a/eZ/Publish/Core/settings/thumbnails.yml
+++ b/eZ/Publish/Core/settings/thumbnails.yml
@@ -12,6 +12,12 @@ services:
         tags:
             - { name: ezplatform.spi.field.thumbnail_strategy, priority: 0 }
 
+    eZ\Publish\Core\FieldType\Image\ImageThumbnailProxyStrategy:
+        decorates: eZ\Publish\Core\FieldType\Image\ImageThumbnailStrategy
+        arguments:
+            $imageThumbnailStrategy: '@.inner'
+            $proxyGenerator: '@eZ\Publish\Core\Repository\ProxyFactory\ProxyGeneratorInterface'
+
     eZ\Publish\Core\FieldType\ImageAsset\ImageAssetThumbnailStrategy:
         lazy: true
         arguments:
