--- a/eZ/Publish/Core/FieldType/Tests/Integration/BinaryBase/BinaryBaseStorage/_fixtures/ezbinaryfile.yaml
+++ b/eZ/Publish/Core/FieldType/Tests/Integration/BinaryBase/BinaryBaseStorage/_fixtures/ezbinaryfile.yaml
@@ -1,2 +1,2 @@
 ezbinaryfile:
-    - { contentobject_attribute_id: 10, version: 1, download_count: 0, filename: a6bbf351175ad9c2f27e5b17c2c5d105.jpg, mime_type: image/jpeg, original_filename: test.jpg }
+    - { contentobject_attribute_id: 10, version: 1, download_count: 0, filename: a6bbf351175ad9c2f27e5b17c2c5d105.png, mime_type: image/png, original_filename: test.png }
