--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-    "name": "ezsystems/ezplatform-kernel",
-    "description": "Kernel used by ezsystems/ezplatform and derivatives. Provides the Content Repository, its APIs, and the application's Symfony framework integration.",
-    "homepage": "https://ezplatform.com",
-    "license": "GPL-2.0-only",
+    "name": "ibexa/core",
+    "description": "Ibexa DXP and Open Source core. Provides the Content Repository, its APIs, and the application's Symfony framework integration.",
+    "homepage": "https://ibexa.co",
+    "license": "(GPL-2.0-only or proprietary)",
     "suggest": {
         "php-64bit": "For support of more than 30 languages, a 64bit php installation on all involved prod/dev machines is required"
     },
@@ -73,7 +73,7 @@
         "phpunit/phpunit": "8.4.0"
     },
     "replace": {
-        "ezsystems/ezpublish-kernel": "*"
+        "ezsystems/ezplatform-kernel": "*"
     },
     "autoload": {
         "psr-4": {
@@ -104,11 +104,11 @@
     },
     "extra": {
         "_ci_branch-comment_": "Keep ci branch up-to-date with master or branch if on stable. ci is never on github but convention used for ci behat testing!",
-        "_ezplatform_branch_for_behat_tests_comment_": "ezplatform branch to use to run Behat tests",
-        "_ezplatform_branch_for_behat_tests": "master",
+        "_ezplatform_branch_for_behat_tests_comment_": "Ibexa branch to use to run Behat tests",
+        "_ezplatform_branch_for_behat_tests": "main",
         "branch-alias": {
-            "dev-master": "1.3.x-dev",
-            "dev-tmp_ci_branch": "1.3.x-dev"
+            "dev-master": "4.0.x-dev",
+            "dev-tmp_ci_branch": "4.0.x-dev"
         },
         "thanks": {
             "name": "ezsystems/ezplatform",
