IBX-143: Fixed merge-up of reindex command changes

--- a/eZ/Bundle/EzPublishCoreBundle/Resources/config/commands.yml
+++ b/eZ/Bundle/EzPublishCoreBundle/Resources/config/commands.yml
@@ -43,4 +43,4 @@ services:
             $projectDir: '%kernel.project_dir%'
             $isDebug: '%kernel.debug%'
         tags:
-            - { name: console.command, command: ezplatform:reindex }
+            - { name: console.command }
