--- a/composer.json
+++ b/composer.json
@@ -63,6 +63,7 @@
         "brianium/paratest": "^4.0",
         "jenner/simple_fork": "^1.2",
         "friends-of-behat/mink-extension": "^2.4",
+        "ibexa/ci-scripts": "^0.1@dev",
         "ezsystems/ezplatform-code-style": "^0.2",
         "phpunit/phpunit": "^8.2",
         "matthiasnoback/symfony-dependency-injection-test": "^4.1",
@@ -105,12 +106,8 @@
         "test": "Run all tests (unit & integration, not functional), might not work on Windows."
     },
     "extra": {
-        "_ci_branch-comment_": "Keep ci branch up-to-date with master or branch if on stable. ci is never on github but convention used for ci behat testing!",
-        "_ezplatform_branch_for_behat_tests_comment_": "ezplatform branch to use to run Behat tests",
-        "_ezplatform_branch_for_behat_tests": "master",
         "branch-alias": {
-            "dev-master": "1.3.x-dev",
-            "dev-tmp_ci_branch": "1.3.x-dev"
+            "dev-master": "1.3.x-dev"
         },
         "thanks": {
             "name": "ezsystems/ezplatform",
