--- a/eZ/Bundle/EzPublishCoreBundle/Resources/config/papi.yml
+++ b/eZ/Bundle/EzPublishCoreBundle/Resources/config/papi.yml
@@ -25,7 +25,7 @@ services:
         class: eZ\Bundle\EzPublishCoreBundle\ApiLoader\StorageEngineFactory
         arguments:
             - "@ezpublish.api.repository_configuration_provider"
-            - !tagged_iterator { tag: 'ezpublish.storageEngine', index_by: 'alias' }
+            - !tagged_iterator { tag: 'ezpublish.storage_engine', index_by: 'alias' }
 
     ezpublish.api.persistence_handler:
         #To disable cache, switch alias to ezpublish.api.storage_engine
